# docchameleon

./: .gitignore  README.md  pyproject.toml  temp.md
doc_customizer_llm/: 1_source_retrieve_eval.ipynb  2_quantitative_analysis.ipynb  4_explanation_gen_eval.ipynb  6_code_gen_eval.ipynb  RAGAS_eval.ipynb  SO_Retriever_eval.ipynb  customized.md  customizer.ipynb  doc_customizer.py  final_quantitative_results.csv  quantitative0.csv  quantitative0.xlsx  quantitative1.csv  quantitative2.csv  quantitative3.csv  quantitative3.xlsx  quantitative_analysis.ipynb  quantitative_data.csv  quantitative_data.xlsx  quantitative_results.csv  quantitative_results_new.csv  retriever_evaluation.ipynb  run.py  summarized.md  temp.csv  temp_SISE.csv  temp_notebook.ipynb  test.md  ~$quantitative_data.xlsx
doc_customizer_llm/Augmented Docs/: aug_tf.clip_by_global_norm.md  aug_tf.cond.md  aug_tf.constant.md  aug_tf.custom_gradient.md  aug_tf.gather.md  aug_tf.keras.Model.md  aug_tf.keras.layers.Dense.md  aug_tf.keras.md  aug_tf.map_fn.md  aug_tf.nn.conv2d.md  aug_tf.nn.sampled_softmax_loss.md  aug_tf.scatter_nd.md  aug_tf.while_loop.md
doc_customizer_llm/SISE/: TrainingData.csv  TrainingHalf1.csv  TrainingHalf2.csv  annotator.py  api.py  features.py  notebook.ipynb  pred_results.csv  predicted.csv  preprocess.py  scraper.py  sise.model  testData.csv  test_data.arff  test_data.csv  test_data_new.csv  train_balanced.csv  training.csv
doc_customizer_llm/SISE/old/: training_half1.csv  training_half2.csv
doc_customizer_llm/ShaDoC/: agent.py  app.py  edges.py  generate.py  graders.py  graph_agent.py  intent.py  knowledge_identifier.py  nodes.py  removed.py  retrieval.py  retrieval_edges.py  retrieval_nodes.py  retriver_eval.py  sandbox.py  search.py  send_request.py  stackoverflow.py  tasks.py  test.py
doc_customizer_llm/ShaDoC/docs_samp/: tf.compat.v1.placeholder.md
doc_customizer_llm/ShaDoC/lib/: api.py  common.py  config.py  utils.py
doc_customizer_llm/ShaDoC/templates/: output_template.py  template_1.py  template_2.py
doc_customizer_llm/assets/: issue_types_tasks.json  youtube_videos.json
doc_customizer_llm/components/AIScaper/: main_scaper.py  test.py
doc_customizer_llm/components/AIWebSearch/: cohere_rag_retriever.py  search.py  serp_claude_search.py  test.py
doc_customizer_llm/components/AlphaCodium/: agent.py  app.py  common.py  intent_identifier.py  nodes.py  pyproject.toml  retrieval.py  sandbox.py
doc_customizer_llm/components/BinaryClassifier/: main_binaryclassifier.py
doc_customizer_llm/components/Customizer/: main_customizer.py
doc_customizer_llm/components/QuestionSummarizer/: claude_summarizer.py  summarize.py  test.py
doc_customizer_llm/components/SORetriever/: main_retriever.py  so_retrieval.py  test.py
doc_customizer_llm/components/TavilySearch/: main_search.py
doc_customizer_llm/components/YTRecommender/: cohere_rag_yt.py
doc_customizer_llm/components/YtRecommender/: yt_video_recommender.py
doc_customizer_llm/data/: Base Experiment - Bing Chat and ChatGPT.xlsx  DocQues_AcceptedAns_Issues.csv  DocQues_AcceptedAns_Issues_v1.csv  DocQues_AcceptedAns_Issues_v1.xlsx  DocQues_AcceptedAns_Issues_v2_2018_2023.csv  DocQues_NoAns_Issues_v1.csv  DocQues_NoAns_Issues_v3_2020_2023.csv  QueryResults.csv  SOBERT_manually_annotated_balanced_data_V2.csv  annotated_data_v0.csv  annotated_issue_types.csv  doc_related_annotated_issue_types_v0.csv  eval_data_ragas.csv  eval_data_ragas_test.csv  eval_data_ragas_test_results.csv  eval_data_ragas_test_results_megh.csv  eval_data_ragas_with_results.csv  eval_dataset_new_part1.csv  eval_dataset_new_part2.csv  eval_dataset_part2.csv  experiment.csv  experiment.xlsx  final_quantitative_results.csv  humaneval_part1.csv  humaneval_part3.csv  humaneval_part7.csv  issue_type_train_data.csv  issue_type_train_data_main_classes.csv  issue_type_train_data_new.csv  issue_type_train_data_v1.csv  quantitative_results.csv  question_retrieval_eval_dataset.csv  question_retrieval_eval_dataset_first10.csv  ragas_user_eval_dataset.csv  sampled_issuetypes_data_v0.csv  sampled_issuetypes_data_v2.csv  tensorflow_iss.csv  tf_releases.csv  user_data_py.csv  user_data_py.xlsx  (+2 more)
doc_customizer_llm/data/api_responses/: answers_of_questions_api_response.csv  so_user_py_answers_api_response.csv  so_user_py_questions_api_response.csv  (+2 more)
doc_customizer_llm/human_eval/: page_1.html
doc_customizer_llm/lib/: api.py  global_settings.py  helper_funcs.py  utils.py  yt_video_recommender.py
doc_customizer_llm/templates/: template_01.py  template_02.py
(+130 files in other folders)
