[tool.poetry]
name = "doc-customizer-llm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "0.1.11"
langchain-openai = "^0.0.5"
chromadb = "^0.4.22"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"
azureml-mlflow = "^1.55.0"
mlflow = "^2.10.2"
spacy = "^3.7.2"
textstat = "^0.7.3"
databricks-cli = "^0.18.0"
google-api-python-client = "^2.117.0"
unstructured = "^0.12.4"
tiktoken = "0.5.2"
pygments = "^2.17.2"
ipykernel = "^6.29.2"
langchain-community = "0.0.25"
tavily-python = "^0.3.1"
langchainhub = "^0.1.14"
openai = "^1.12.0"
setfit = "^1.0.3"
scikit-learn = "1.2.2"
ipywidgets = "^8.1.2"
cohere = "^4.52"
huggingface-hub = "^0.21.4"
seaborn = "^0.13.2"
transformers = "^4.38.2"
accelerate = "^0.28.0"
playwright = "^1.42.0"
beautifulsoup4 = "^4.12.3"
langchain-anthropic = "^0.1.4"
langchain-core = "^0.1.31"
langsmith = "^0.1.25"
langchain-voyageai = "^0.1.0"
google-search-results = "^2.4.2"
html2text = "^2024.2.26"
duckduckgo-search = "^5.1.0"


[[tool.poetry.source]]
name = "pip"
url = "https://pypi.org/simple/"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
