[tool.poetry]
name = "doc-customizer-llm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "0.1.17"
langchain-openai = "^0.0.5"
chromadb = "^0.4.22"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"
spacy = "^3.7.2"
textstat = "^0.7.3"
unstructured = "^0.12.4"
tiktoken = "0.5.2"
pygments = "^2.17.2"
ipykernel = "^6.29.2"
tavily-python = "^0.3.1"
langchainhub = "^0.1.14"
openai = "^1.12.0"
setfit = "^1.0.3"
scikit-learn = "1.2.2"
ipywidgets = "^8.1.2"
cohere = "5.3"
huggingface-hub = "^0.21.4"
seaborn = "^0.13.2"
transformers = "^4.38.2"
accelerate = "^0.28.0"
playwright = "^1.42.0"
beautifulsoup4 = "^4.12.3"
langchain-anthropic = "^0.1.4"
langchain-core = "^0.1.31"
langsmith = "^0.1.25"
langchain-voyageai = "^0.1.0"
html2text = "^2024.2.26"
ragas = "^0.1.4"
modal = "^0.61.95"
langgraph = "^0.0.30"
langserve = {extras = ["all"], version = "^0.0.51"}
langchain-community = "0.0.36"
mdutils = "^1.6.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
langchain-experimental = "^0.0.58"
langchain-cohere = "^0.1.4"
tqdm = "^4.66.4"
pingouin = "^0.5.4"
markdownify = "^0.12.1"
llama-index = "^0.10.50"
llama-index-llms-openai = "^0.1.23"
stanza = "^1.8.2"
nltk = "^3.8.1"
imblearn = "^0.0"
nest-asyncio = "^1.6.0"


[[tool.poetry.source]]
name = "pip"
url = "https://pypi.org/simple/"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
