[tool.poetry]
name = "doc-customizer-llm"
version = "0.1.0"
description = ""
authors = ["Sharuka Thirimanne <sharukat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "0.1.11"
langchain-openai = "^0.0.5"
chromadb = "^0.4.22"
tiktoken = "0.5.2"
langchain-community = "0.0.25"
langchainhub = "^0.1.14"
scikit-learn = "1.2.2"
cohere = "^4.52"
langchain-core = "^0.1.31"
langsmith = "^0.1.25"
langgraph = "^0.0.30"
langserve = {extras = ["all"], version = "^0.0.51"}
numpy = "^1.26.4"
tensorflow = "^2.16.1"


[[tool.poetry.source]]
name = "pip"
url = "https://pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
